home-assistant/home-assistant/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app homeassistant
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: *app
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  serviceName: *app
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: *app
          image: ${SECRET_HARBOR_URL}/homeassistant:2025.1.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "2048Mi"
              cpu: 1
            requests:
              memory: "512Mi"
              cpu: 300m
          livenessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          securityContext:
            privileged: true
          ports:
            - containerPort: 8123
            - containerPort: 5683
          volumeMounts:
            - name: homeassistant-data
              mountPath: /config
            - name: localtime
              mountPath: '/etc/localtime'
              readOnly: true
      volumes:
        - name: homeassistant-data
          persistentVolumeClaim:
            claimName: homeassistant-data
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: hacs-install
          configMap:
            name: hacs-install
        - name: default-config
          configMap:
            name: home-assistant-config
