home-assistant/home-assistant/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app homeassistant
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`ha.${SECRET_DOMAIN_0}`)"
      kind: Rule
      # middlewares:
      #   - name: authentik
      #     namespace: authentik
      services:
        - name: *app
          port: 80
      priority: 10
  tls: {}
